0.7.0/index.md
# @grethel-labs/excaliplant — API reference

> Generated from JSDoc by [`docs/scripts/build-docs.mjs`](./scripts/build-docs.mjs)
> on every `npm run build:docs` run. Do not edit this file by hand.
> **v0.7.0** · MIT

This is the auto-generated API reference for `@grethel-labs/excaliplant`. The
shape of the public API is documented in [`README.md`](../README.md);
this document is the exhaustive view across every exported symbol in
[`index.mjs`](../index.mjs) and [`src/`](../src/).

## Table of contents

- [`(package root)`](#package-root)
- [`layout/elk_layout`](#layoutelk_layout)
- [`layout/sequence_layout`](#layoutsequence_layout)
- [`layout/sequence_spacing`](#layoutsequence_spacing)
- [`layout/sizing`](#layoutsizing)
- [`model/diagram`](#modeldiagram)
- [`parser/component_context`](#parsercomponent_context)
- [`parser/engine`](#parserengine)
- [`parser/plantuml`](#parserplantuml)
- [`parser/plugins/component/class_block`](#parserpluginscomponentclass_block)
- [`parser/plugins/component/connections`](#parserpluginscomponentconnections)
- [`parser/plugins/component/containers`](#parserpluginscomponentcontainers)
- [`parser/plugins/component/notes`](#parserpluginscomponentnotes)
- [`parser/plugins/component/preamble`](#parserpluginscomponentpreamble)
- [`parser/plugins/component/shapes`](#parserpluginscomponentshapes)
- [`parser/plugins/sequence/advanced`](#parserpluginssequenceadvanced)
- [`parser/plugins/sequence/fragments`](#parserpluginssequencefragments)
- [`parser/plugins/sequence/messages`](#parserpluginssequencemessages)
- [`parser/plugins/sequence/notes`](#parserpluginssequencenotes)
- [`parser/plugins/sequence/participants`](#parserpluginssequenceparticipants)
- [`parser/plugins/sequence/preamble`](#parserpluginssequencepreamble)
- [`parser/sequence_context`](#parsersequence_context)
- [`parser/utils`](#parserutils)
- [`render/canvas_svg`](#rendercanvas_svg)
- [`render/excalidraw`](#renderexcalidraw)
- [`render/png`](#renderpng)
- [`render/rng`](#renderrng)
- [`render/schema`](#renderschema)
- [`render/sequence_render`](#rendersequence_render)
- [`render/svg`](#rendersvg)
- [`style/colors`](#stylecolors)
- [`style/font`](#stylefont)
- [`style/style`](#stylestyle)
- [`style/text`](#styletext)

---

## `(package root)`

_Source: [`index.mjs`](index.mjs)_

### Exports

| Name                                             | Kind     | Visibility  |
| ------------------------------------------------ | -------- | ----------- |
| [`RenderResult`](#renderresult-package-root)     | class    | public      |
| [`renderPlantUml`](#renderplantuml-package-root) | function | unspecified |
| [`renderDiagram`](#renderdiagram-package-root)   | function | unspecified |

#### <a id="renderresult-package-root"></a>`RenderResult`

```ts
class RenderResult
```

Chainable result returned by `renderPlantUml` / `renderDiagram`.

Awaiting the result yields the Excalidraw JSON document, so existing
callers (`const doc = await renderPlantUml(text)`) keep working.

On top of that, the result exposes `.toSvg()` and `.toPng()` so a
caller can write:

```js
const r = renderPlantUml(text);
const svg = await r.toSvg();
const png = await r.toPng({ width: 4800 });
```

Both helpers lazily await the underlying document — so calling
`toSvg()` / `toPng()` directly on the unawaited result works too.

**Members**

##### `RenderResult.constructor`

```ts
constructor(docPromise);
```

##### `RenderResult.then`

```ts
then(onFulfilled, onRejected);
```

Thenable: `await result` yields the Excalidraw JSON document.

| Param                      | Type                  | Description |
| -------------------------- | --------------------- | ----------- | --- |
| `onFulfilled` _(optional)_ | `(value: object) => T | Promise<T>` | —   |
| `onRejected` _(optional)_  | `(reason: any) => R   | Promise<R>` | —   |

**Returns:** `Promise<T | R>`

#### <a id="renderplantuml-package-root"></a>`renderPlantUml`

```ts
function renderPlantUml(plantuml, opts = {});
```

Render a PlantUML source string to an Excalidraw JSON document.

The return value is a thenable {@link RenderResult}: `await` it for
the Excalidraw JSON, or call `.toSvg()` / `.toPng()` on it to get
the rasterised diagram in one chained call.

**Parameters**

| Name                | Type     | Description                                                           |
| ------------------- | -------- | --------------------------------------------------------------------- |
| `plantuml`          | `string` | PlantUML text (see src/parser/plantuml.mjs for the supported subset). |
| `opts` _(optional)_ | `object` | —                                                                     |

**Returns:** `RenderResult` — Thenable wrapping the Excalidraw JSON document.

#### <a id="renderdiagram-package-root"></a>`renderDiagram`

```ts
function renderDiagram(diagram, opts = {});
```

Render an already-built Diagram model. Useful for callers that want
to bypass the PlantUML parser and feed shapes programmatically.

**Parameters**

| Name                | Type                                       | Description                                        |
| ------------------- | ------------------------------------------ | -------------------------------------------------- | --- |
| `diagram`           | `import("./src/model/diagram.mjs").Diagram | import("./src/model/diagram.mjs").SequenceDiagram` | —   |
| `opts` _(optional)_ | `object`                                   | —                                                  |

**Returns:** `RenderResult`

---

## `layout/elk_layout`

_Source: [`src/layout/elk_layout.mjs`](src/layout/elk_layout.mjs)_

### Exports

| Name                                               | Kind             | Visibility  |
| -------------------------------------------------- | ---------------- | ----------- |
| [`layoutDiagram`](#layoutdiagram-layoutelk_layout) | function (async) | unspecified |

#### <a id="layoutdiagram-layoutelk_layout"></a>`layoutDiagram`

```ts
async function layoutDiagram(diagram);
```

Lay out a `Diagram` (or `SequenceDiagram`) in place: assigns
absolute `x`/`y` coordinates and edge waypoints to every shape.

Component / use-case / deployment diagrams are routed via ELK
(`elkjs`, layered algorithm + orthogonal routing). Sequence
diagrams use a deterministic tabular layout.

**Parameters**

| Name      | Type                                    | Description                                     |
| --------- | --------------------------------------- | ----------------------------------------------- | ---------------------- |
| `diagram` | `import("../model/diagram.mjs").Diagram | import("../model/diagram.mjs").SequenceDiagram` | The diagram to mutate. |

**Returns:** `Promise<void>`

### Type definitions

#### `Pt`

```ts
{x:number,y:number}
```

---

## `layout/sequence_layout`

_Source: [`src/layout/sequence_layout.mjs`](src/layout/sequence_layout.mjs)_

### Exports

| Name                                                                    | Kind     | Visibility |
| ----------------------------------------------------------------------- | -------- | ---------- |
| [`layoutSequenceDiagram`](#layoutsequencediagram-layoutsequence_layout) | function | public     |

#### <a id="layoutsequencediagram-layoutsequence_layout"></a>`layoutSequenceDiagram`

```ts
function layoutSequenceDiagram(diagram);
```

Lay out a SequenceDiagram (see `src/model/diagram.mjs`) on a
tabular grid: lifelines along x, time along y. Mutates the model
in-place — every participant, message and note receives final
`x`/`y` coordinates.

**Parameters**

| Name      | Type                                             | Description |
| --------- | ------------------------------------------------ | ----------- |
| `diagram` | `import("../model/diagram.mjs").SequenceDiagram` | —           |

---

## `layout/sequence_spacing`

_Source: [`src/layout/sequence_spacing.mjs`](src/layout/sequence_spacing.mjs)_

### Exports

| Name                                                                         | Kind     | Visibility  |
| ---------------------------------------------------------------------------- | -------- | ----------- |
| [`SEQUENCE_ARROWHEAD_SIZE`](#sequence_arrowhead_size-layoutsequence_spacing) | const    | unspecified |
| [`SEQUENCE_SPACING`](#sequence_spacing-layoutsequence_spacing)               | const    | public      |
| [`timelineItemGap`](#timelineitemgap-layoutsequence_spacing)                 | function | public      |
| [`arrowLabelBudget`](#arrowlabelbudget-layoutsequence_spacing)               | function | public      |

#### <a id="sequence_arrowhead_size-layoutsequence_spacing"></a>`SEQUENCE_ARROWHEAD_SIZE`

```ts
const SEQUENCE_ARROWHEAD_SIZE;
```

Default visual size reserved for rendered arrowheads in px.

#### <a id="sequence_spacing-layoutsequence_spacing"></a>`SEQUENCE_SPACING`

```ts
const SEQUENCE_SPACING;
```

Central spacing values for sequence diagrams.

#### <a id="timelineitemgap-layoutsequence_spacing"></a>`timelineItemGap`

```ts
function timelineItemGap();
```

Symmetric vertical gap before and after every visible timeline item.

**Returns:** `number` — Timeline item gap in px.

#### <a id="arrowlabelbudget-layoutsequence_spacing"></a>`arrowLabelBudget`

```ts
function arrowLabelBudget(arrowLength, start, end);
```

Horizontal label budget after arrowheads have claimed their visual tips.

**Parameters**

| Name          | Type                         | Description                  |
| ------------- | ---------------------------- | ---------------------------- | ---------- | --------------- |
| `arrowLength` | `number`                     | Absolute arrow length in px. |
| `start`       | `{size?:number,head?:string} | null                         | undefined` | Start endpoint. |
| `end`         | `{size?:number,head?:string} | null                         | undefined` | End endpoint.   |

**Returns:** `number` — Safe label width in px.

---

## `layout/sizing`

_Source: [`src/layout/sizing.mjs`](src/layout/sizing.mjs)_

### Exports

| Name                                       | Kind     | Visibility |
| ------------------------------------------ | -------- | ---------- |
| [`SIZING`](#sizing-layoutsizing)           | const    | public     |
| [`sizeDiagram`](#sizediagram-layoutsizing) | function | public     |

#### <a id="sizing-layoutsizing"></a>`SIZING`

```ts
const SIZING;
```

Default padding / spacing constants used by {@link sizeDiagram}.
Exposed so renderers and downstream layout passes can read the
same numbers.

#### <a id="sizediagram-layoutsizing"></a>`sizeDiagram`

```ts
function sizeDiagram(diagram);
```

First sizing pass. Walks every plane / subplane / box in the
diagram and writes width / height onto the model. Must run before
the ELK layout pass so positions can be assigned.

**Parameters**

| Name      | Type                                     | Description                                      |
| --------- | ---------------------------------------- | ------------------------------------------------ |
| `diagram` | `import("../model/diagram.mjs").Diagram` | Diagram model whose elements are sized in place. |

**Returns:** `void` — Mutates `diagram` directly; nothing is returned.

---

## `model/diagram`

_Source: [`src/model/diagram.mjs`](src/model/diagram.mjs)_

### Exports

| Name                                                                     | Kind  | Visibility |
| ------------------------------------------------------------------------ | ----- | ---------- |
| [`SIDES`](#sides-modeldiagram)                                           | const | public     |
| [`SHAPES`](#shapes-modeldiagram)                                         | const | public     |
| [`ARROW_HEADS`](#arrow_heads-modeldiagram)                               | const | public     |
| [`ARROW_ANCHORS`](#arrow_anchors-modeldiagram)                           | const | public     |
| [`ARROW_DIRECTIONS`](#arrow_directions-modeldiagram)                     | const | public     |
| [`ARROW_LINE_STYLES`](#arrow_line_styles-modeldiagram)                   | const | public     |
| [`SEQUENCE_ARROW_HEADS`](#sequence_arrow_heads-modeldiagram)             | const | public     |
| [`SEQUENCE_ARROW_ANCHORS`](#sequence_arrow_anchors-modeldiagram)         | const | public     |
| [`SEQUENCE_ARROW_DIRECTIONS`](#sequence_arrow_directions-modeldiagram)   | const | public     |
| [`SEQUENCE_ARROW_LINE_STYLES`](#sequence_arrow_line_styles-modeldiagram) | const | public     |
| [`DEFAULT_ARROW_HEAD_SIZE`](#default_arrow_head_size-modeldiagram)       | const | public     |
| [`ArrowEndpoint`](#arrowendpoint-modeldiagram)                           | class | public     |
| [`ArrowLine`](#arrowline-modeldiagram)                                   | class | public     |
| [`ArrowLabel`](#arrowlabel-modeldiagram)                                 | class | public     |
| [`DiagramArrow`](#diagramarrow-modeldiagram)                             | class | public     |
| [`Box`](#box-modeldiagram)                                               | class | public     |
| [`Subplane`](#subplane-modeldiagram)                                     | class | public     |
| [`Plane`](#plane-modeldiagram)                                           | class | public     |
| [`Connection`](#connection-modeldiagram)                                 | class | public     |
| [`Diagram`](#diagram-modeldiagram)                                       | class | public     |
| [`Participant`](#participant-modeldiagram)                               | class | public     |
| [`SequenceArrowEndpoint`](#sequencearrowendpoint-modeldiagram)           | class | public     |
| [`SequenceArrowLine`](#sequencearrowline-modeldiagram)                   | class | public     |
| [`SequenceArrow`](#sequencearrow-modeldiagram)                           | class | public     |
| [`Message`](#message-modeldiagram)                                       | class | public     |
| [`SequenceNote`](#sequencenote-modeldiagram)                             | class | public     |
| [`SequenceFragment`](#sequencefragment-modeldiagram)                     | class | public     |
| [`SequenceActivation`](#sequenceactivation-modeldiagram)                 | class | public     |
| [`SequenceMarker`](#sequencemarker-modeldiagram)                         | class | public     |
| [`SequenceReference`](#sequencereference-modeldiagram)                   | class | public     |
| [`SequenceParticipantGroup`](#sequenceparticipantgroup-modeldiagram)     | class | public     |
| [`SequenceDiagram`](#sequencediagram-modeldiagram)                       | class | public     |

#### <a id="sides-modeldiagram"></a>`SIDES`

```ts
const SIDES;
```

Anchor sides for box ports / connection routing.

#### <a id="shapes-modeldiagram"></a>`SHAPES`

```ts
const SHAPES;
```

Logical box shapes the parser may attach to a {@link Box}. The renderer
turns each into the corresponding Excalidraw primitive.

#### <a id="arrow_heads-modeldiagram"></a>`ARROW_HEADS`

```ts
const ARROW_HEADS;
```

Generic arrow endpoint head kinds. These are model-level semantics;
renderers map them to native primitives or generated SVG marker shapes.

#### <a id="arrow_anchors-modeldiagram"></a>`ARROW_ANCHORS`

```ts
const ARROW_ANCHORS;
```

Generic arrow endpoint anchors. Component diagrams use `node`/`port`,
sequence diagrams use `participant`, and boundary arrows use diagram/short
anchors.

#### <a id="arrow_directions-modeldiagram"></a>`ARROW_DIRECTIONS`

```ts
const ARROW_DIRECTIONS;
```

Generic arrow direction semantics.

#### <a id="arrow_line_styles-modeldiagram"></a>`ARROW_LINE_STYLES`

```ts
const ARROW_LINE_STYLES;
```

Generic arrow line styles.

#### <a id="sequence_arrow_heads-modeldiagram"></a>`SEQUENCE_ARROW_HEADS`

```ts
const SEQUENCE_ARROW_HEADS;
```

Sequence-arrow endpoint head kinds. @public

#### <a id="sequence_arrow_anchors-modeldiagram"></a>`SEQUENCE_ARROW_ANCHORS`

```ts
const SEQUENCE_ARROW_ANCHORS;
```

Sequence-arrow endpoint anchors. @public

#### <a id="sequence_arrow_directions-modeldiagram"></a>`SEQUENCE_ARROW_DIRECTIONS`

```ts
const SEQUENCE_ARROW_DIRECTIONS;
```

Sequence-arrow direction semantics. @public

#### <a id="sequence_arrow_line_styles-modeldiagram"></a>`SEQUENCE_ARROW_LINE_STYLES`

```ts
const SEQUENCE_ARROW_LINE_STYLES;
```

Sequence-arrow line styles. @public

#### <a id="default_arrow_head_size-modeldiagram"></a>`DEFAULT_ARROW_HEAD_SIZE`

```ts
const DEFAULT_ARROW_HEAD_SIZE;
```

Default visual endpoint glyph size in px. @public

#### <a id="arrowendpoint-modeldiagram"></a>`ArrowEndpoint`

```ts
class ArrowEndpoint
```

One endpoint of a reusable diagram arrow.

**Members**

##### `ArrowEndpoint.constructor`

```ts
constructor(
  ({
    head = "none",
    anchor = "node",
    excalidrawArrowhead = null,
    label = "",
    size = DEFAULT_ARROW_HEAD_SIZE,
    direction = "auto",
  } = {}),
);
```

| Param               | Type     | Description |
| ------------------- | -------- | ----------- |
| `spec` _(optional)_ | `object` | —           |

#### <a id="arrowline-modeldiagram"></a>`ArrowLine`

```ts
class ArrowLine
```

Reusable visual line segment for arrows.

**Members**

##### `ArrowLine.constructor`

```ts
constructor(({ style = "solid", color = "", slant = 0, route = "straight", points = [] } = {}));
```

| Param               | Type     | Description |
| ------------------- | -------- | ----------- |
| `spec` _(optional)_ | `object` | —           |

#### <a id="arrowlabel-modeldiagram"></a>`ArrowLabel`

```ts
class ArrowLabel
```

Label attached to an arrow line or endpoint.

**Members**

##### `ArrowLabel.constructor`

```ts
constructor(({ text = "", placement = "center", segmentIndex = null } = {}));
```

| Param               | Type     | Description |
| ------------------- | -------- | ----------- |
| `spec` _(optional)_ | `object` | —           |

#### <a id="diagramarrow-modeldiagram"></a>`DiagramArrow`

```ts
class DiagramArrow
```

Diagram-agnostic arrow: start endpoint, line, end endpoint, plus labels.

**Members**

##### `DiagramArrow.constructor`

```ts
constructor(
  ({ start = {}, end = {}, line = {}, labels = [], source = "", direction = "right" } = {}),
);
```

| Param               | Type     | Description |
| ------------------- | -------- | ----------- |
| `spec` _(optional)_ | `object` | —           |

#### <a id="box-modeldiagram"></a>`Box`

```ts
class Box
```

A single component-style node in the diagram model.

Boxes carry their own geometry once the layout pass has run; before
layout, the geometry fields are zero.

**Members**

##### `Box.constructor`

```ts
constructor({ id, title, description = "", shape = "rectangle", stereotype = "", members = [] });
```

| Param  | Type     | Description |
| ------ | -------- | ----------- |
| `spec` | `object` | —           |

##### `Box.centre`

```ts
centre();
```

#### <a id="subplane-modeldiagram"></a>`Subplane`

```ts
class Subplane
```

A nested grouping inside a {@link Plane} (e.g. PlantUML
`frame`, `folder`, `together`). Subplanes only contain boxes;
arbitrary nesting is intentionally not supported.

**Members**

##### `Subplane.constructor`

```ts
constructor({ id, title, kind = "subplane" });
```

| Param  | Type     | Description |
| ------ | -------- | ----------- |
| `spec` | `object` | —           |

##### `Subplane.addBox`

```ts
addBox(box);
```

Attach `box` to this subplane and back-link its parent.

| Param | Type  | Description     |
| ----- | ----- | --------------- |
| `box` | `Box` | The box to add. |

**Returns:** `Box` — The same box (for chaining).

#### <a id="plane-modeldiagram"></a>`Plane`

```ts
class Plane
```

A top-level container in a component-style {@link Diagram}
(PlantUML `package`, `frame`, `node` …). Holds boxes and
subplanes.

**Members**

##### `Plane.constructor`

```ts
constructor({ id, title, color = null, kind = "package" });
```

| Param  | Type     | Description |
| ------ | -------- | ----------- |
| `spec` | `object` | —           |

##### `Plane.addSubplane`

```ts
addSubplane(subplane);
```

Attach a {@link Subplane} as a child of this plane.

| Param      | Type       | Description          |
| ---------- | ---------- | -------------------- |
| `subplane` | `Subplane` | The subplane to add. |

**Returns:** `Subplane` — The same subplane (for chaining).

##### `Plane.addBox`

```ts
addBox(box);
```

Attach a {@link Box} directly as a child (bypassing any subplane).

| Param | Type  | Description     |
| ----- | ----- | --------------- |
| `box` | `Box` | The box to add. |

**Returns:** `Box` — The same box (for chaining).

#### <a id="connection-modeldiagram"></a>`Connection`

```ts
class Connection
```

Directed connection between two {@link Box}es.

Arrowhead values map directly onto Excalidraw's start/end
arrowhead strings: `arrow | triangle | triangle_outline | diamond |
diamond_outline | dot | bar | circle | circle_outline | null`.

**Members**

##### `Connection.constructor`

```ts
constructor({
  id,
  from,
  to,
  label = "",
  kind = "default",
  dashed = false,
  startArrowhead = null,
  endArrowhead = "arrow",
  directionHint = null,
  fromMul = "",
  toMul = "",
  arrow = null,
});
```

| Param  | Type     | Description |
| ------ | -------- | ----------- |
| `spec` | `object` | —           |

#### <a id="diagram-modeldiagram"></a>`Diagram`

```ts
class Diagram
```

Component / deployment / use-case style diagram. Top-level container
for {@link Plane}s and inter-plane {@link Connection}s.

**Members**

##### `Diagram.addPlane`

```ts
addPlane(plane);
```

Register a top-level plane.

| Param   | Type    | Description       |
| ------- | ------- | ----------------- |
| `plane` | `Plane` | The plane to add. |

**Returns:** `Plane` — The same plane (for chaining).

##### `Diagram.addConnection`

```ts
addConnection(connection);
```

Register a connection and back-link it from both endpoint boxes.

| Param        | Type         | Description            |
| ------------ | ------------ | ---------------------- |
| `connection` | `Connection` | The connection to add. |

**Returns:** `Connection` — The same connection (for chaining).

##### `Diagram.allBoxes`

```ts
allBoxes();
```

##### `Diagram.boxById`

```ts
boxById(id);
```

Look up a box by its stable id.

| Param | Type     | Description               |
| ----- | -------- | ------------------------- |
| `id`  | `string` | The box id to search for. |

**Returns:** `Box | null` — The box, or `null` if no plane contains it.

#### <a id="participant-modeldiagram"></a>`Participant`

```ts
class Participant
```

One lifeline in a {@link SequenceDiagram}.

**Members**

##### `Participant.constructor`

```ts
constructor({ id, title, shape = "participant", stereotype = "", color = "", order = null });
```

| Param  | Type     | Description |
| ------ | -------- | ----------- |
| `spec` | `object` | —           |

#### <a id="sequencearrowendpoint-modeldiagram"></a>`SequenceArrowEndpoint`

```ts
class SequenceArrowEndpoint extends ArrowEndpoint
```

One endpoint of a sequence message arrow.

**Members**

##### `SequenceArrowEndpoint.constructor`

```ts
constructor((spec = {}));
```

| Param               | Type     | Description |
| ------------------- | -------- | ----------- |
| `spec` _(optional)_ | `object` | —           |

#### <a id="sequencearrowline-modeldiagram"></a>`SequenceArrowLine`

```ts
class SequenceArrowLine extends ArrowLine
```

Visual line segment of a sequence message arrow.

**Members**

##### `SequenceArrowLine.constructor`

```ts
constructor((spec = {}));
```

| Param               | Type     | Description |
| ------------------- | -------- | ----------- |
| `spec` _(optional)_ | `object` | —           |

#### <a id="sequencearrow-modeldiagram"></a>`SequenceArrow`

```ts
class SequenceArrow extends DiagramArrow
```

Object-oriented representation of a PlantUML sequence message arrow:
start endpoint, line segment, and end endpoint.

**Members**

##### `SequenceArrow.constructor`

```ts
constructor(({ start = {}, end = {}, line = {}, source = "", direction = "right" } = {}));
```

| Param               | Type     | Description |
| ------------------- | -------- | ----------- |
| `spec` _(optional)_ | `object` | —           |

#### <a id="message-modeldiagram"></a>`Message`

```ts
class Message
```

A message arrow exchanged between two {@link Participant}s.

**Members**

##### `Message.constructor`

```ts
constructor({
  id,
  from,
  to,
  label = "",
  dashed = false,
  kind = "sync",
  startArrowhead = null,
  endArrowhead = "arrow",
  arrow = null,
  color = "",
});
```

| Param  | Type     | Description |
| ------ | -------- | ----------- |
| `spec` | `object` | —           |

#### <a id="sequencenote-modeldiagram"></a>`SequenceNote`

```ts
class SequenceNote
```

Free-form note attached to one or two {@link Participant}s in a
{@link SequenceDiagram}.

**Members**

##### `SequenceNote.constructor`

```ts
constructor({ id, text, side, target, target2 = null, shape = "note", color = "" });
```

| Param  | Type     | Description |
| ------ | -------- | ----------- |
| `spec` | `object` | —           |

#### <a id="sequencefragment-modeldiagram"></a>`SequenceFragment`

```ts
class SequenceFragment
```

Combined fragment in a sequence diagram (`opt`, `loop`, `alt`, `par`,
`break`, `critical`, `group`). A fragment owns one or more operands;
each operand spans a declaration-order range on the sequence timeline.

**Members**

##### `SequenceFragment.constructor`

```ts
constructor({ id, kind, label = "", secondaryLabel = "", color = "", operands = [] });
```

| Param  | Type     | Description |
| ------ | -------- | ----------- |
| `spec` | `object` | —           |

#### <a id="sequenceactivation-modeldiagram"></a>`SequenceActivation`

```ts
class SequenceActivation
```

Activation bar on a participant lifeline.

**Members**

##### `SequenceActivation.constructor`

```ts
constructor({
  id,
  participant,
  startSeq,
  endSeq = startSeq,
  color = "",
  depth = 0,
  side = 0,
  nestSide = 1,
  caller = null,
});
```

| Param  | Type     | Description |
| ------ | -------- | ----------- |
| `spec` | `object` | —           |

#### <a id="sequencemarker-modeldiagram"></a>`SequenceMarker`

```ts
class SequenceMarker
```

Timeline marker such as dividers (`== label ==`), delays (`...`), and vertical spacers.

**Members**

##### `SequenceMarker.constructor`

```ts
constructor({ id, kind, label = "", size = 0 });
```

| Param  | Type     | Description |
| ------ | -------- | ----------- |
| `spec` | `object` | —           |

#### <a id="sequencereference-modeldiagram"></a>`SequenceReference`

```ts
class SequenceReference
```

`ref over ...` reference frame in a sequence diagram.

**Members**

##### `SequenceReference.constructor`

```ts
constructor({ id, label, target, target2 = null });
```

| Param  | Type     | Description |
| ------ | -------- | ----------- |
| `spec` | `object` | —           |

#### <a id="sequenceparticipantgroup-modeldiagram"></a>`SequenceParticipantGroup`

```ts
class SequenceParticipantGroup
```

Participant grouping box declared with PlantUML `box ... end box`.

**Members**

##### `SequenceParticipantGroup.constructor`

```ts
constructor({ id, label = "", color = "" });
```

| Param  | Type     | Description |
| ------ | -------- | ----------- |
| `spec` | `object` | —           |

#### <a id="sequencediagram-modeldiagram"></a>`SequenceDiagram`

```ts
class SequenceDiagram
```

Sequence diagram model: lifelines, messages, notes, fragments and
other timeline decorations laid out on a vertical time axis.

**Members**

##### `SequenceDiagram.addParticipant`

```ts
addParticipant(p);
```

Register a lifeline.

| Param | Type          | Description      |
| ----- | ------------- | ---------------- |
| `p`   | `Participant` | Lifeline to add. |

**Returns:** `Participant` — The same lifeline (for chaining).

##### `SequenceDiagram.addMessage`

```ts
addMessage(m);
```

Register a message arrow.

| Param | Type      | Description     |
| ----- | --------- | --------------- |
| `m`   | `Message` | Message to add. |

**Returns:** `Message` — The same message (for chaining).

##### `SequenceDiagram.addNote`

```ts
addNote(n);
```

Register a free-form note.

| Param | Type           | Description  |
| ----- | -------------- | ------------ |
| `n`   | `SequenceNote` | Note to add. |

**Returns:** `SequenceNote` — The same note (for chaining).

##### `SequenceDiagram.addFragment`

```ts
addFragment(f);
```

Register a combined sequence fragment.

| Param | Type               | Description      |
| ----- | ------------------ | ---------------- |
| `f`   | `SequenceFragment` | Fragment to add. |

**Returns:** `SequenceFragment` — The same fragment (for chaining).

##### `SequenceDiagram.addActivation`

```ts
addActivation(a);
```

Register an activation bar.

| Param | Type                 | Description        |
| ----- | -------------------- | ------------------ |
| `a`   | `SequenceActivation` | Activation to add. |

**Returns:** `SequenceActivation` — The same activation.

##### `SequenceDiagram.addMarker`

```ts
addMarker(m);
```

Register a sequence marker.

| Param | Type             | Description    |
| ----- | ---------------- | -------------- |
| `m`   | `SequenceMarker` | Marker to add. |

**Returns:** `SequenceMarker` — The same marker.

##### `SequenceDiagram.addReference`

```ts
addReference(r);
```

Register a reference frame.

| Param | Type                | Description       |
| ----- | ------------------- | ----------------- |
| `r`   | `SequenceReference` | Reference to add. |

**Returns:** `SequenceReference` — The same reference.

##### `SequenceDiagram.addParticipantGroup`

```ts
addParticipantGroup(g);
```

Register a participant group.

| Param | Type                       | Description   |
| ----- | -------------------------- | ------------- |
| `g`   | `SequenceParticipantGroup` | Group to add. |

**Returns:** `SequenceParticipantGroup` — The same group.

##### `SequenceDiagram.participantById`

```ts
participantById(id);
```

Look up a lifeline by id.

| Param | Type     | Description                |
| ----- | -------- | -------------------------- |
| `id`  | `string` | Participant id to look up. |

**Returns:** `Participant | null` — The lifeline, or `null` when missing.

---

## `parser/component_context`

_Source: [`src/parser/component_context.mjs`](src/parser/component_context.mjs)_

### Exports

| Name                                                                        | Kind     | Visibility |
| --------------------------------------------------------------------------- | -------- | ---------- |
| [`createComponentContext`](#createcomponentcontext-parsercomponent_context) | function | public     |

#### <a id="createcomponentcontext-parsercomponent_context"></a>`createComponentContext`

```ts
function createComponentContext();
```

Construct the mutable parsing context that component plugins share
during a single `parsePlantUml` invocation. The returned object
exposes high-level helpers (`addBox`, `openContainer`, …) so that
plugins never touch the model classes directly.

**Returns:** `{ readonly result: import("../model/diagram.mjs").Diagram, diagram: import("../model/diagram.mjs").Diagram, boxes: Map<string, import("../model/diagram.mjs").Box>, setTitle(t: string): void, openContainer(spec: { id: string, title: string, kind: string }): void, closeContainer(): void, addBox(spec: object): import("../model/diagram.mjs").Box, queueConnection(spec: object): void, queueNote(spec: object): void, nextNoteId(): string, finalize(): void, }`

---

## `parser/engine`

_Source: [`src/parser/engine.mjs`](src/parser/engine.mjs)_

### Exports

| Name                                   | Kind     | Visibility |
| -------------------------------------- | -------- | ---------- |
| [`runEngine`](#runengine-parserengine) | function | public     |

#### <a id="runengine-parserengine"></a>`runEngine`

```ts
function runEngine({ lines, plugins, ctx, onUnknownLine });
```

Walk `lines` once and dispatch each line to a list of plugins.

**Parameters**

| Name   | Type     | Description |
| ------ | -------- | ----------- |
| `args` | `object` | —           |

**Returns:** `object` — Whatever `ctx.result` exposes — typically a `Diagram` / `SequenceDiagram` instance.

### Type definitions

#### `PluginBlock`

```ts
object;
```

#### `Plugin`

```ts
object;
```

---

## `parser/plantuml`

_Source: [`src/parser/plantuml.mjs`](src/parser/plantuml.mjs)_

### Exports

| Name                                                                     | Kind     | Visibility |
| ------------------------------------------------------------------------ | -------- | ---------- |
| [`DEFAULT_COMPONENT_PLUGINS`](#default_component_plugins-parserplantuml) | const    | public     |
| [`DEFAULT_SEQUENCE_PLUGINS`](#default_sequence_plugins-parserplantuml)   | const    | public     |
| [`DEFAULT_PARSE_LIMITS`](#default_parse_limits-parserplantuml)           | const    | public     |
| [`parsePlantUml`](#parseplantuml-parserplantuml)                         | function | public     |

#### <a id="default_component_plugins-parserplantuml"></a>`DEFAULT_COMPONENT_PLUGINS`

```ts
const DEFAULT_COMPONENT_PLUGINS;
```

Default plugin pipeline for component-style diagrams. Order matters:
note / class blocks are tried before the bare-container regex; the
greedy connection plugin runs last.

#### <a id="default_sequence_plugins-parserplantuml"></a>`DEFAULT_SEQUENCE_PLUGINS`

```ts
const DEFAULT_SEQUENCE_PLUGINS;
```

Default plugin pipeline for sequence diagrams.

#### <a id="default_parse_limits-parserplantuml"></a>`DEFAULT_PARSE_LIMITS`

```ts
const DEFAULT_PARSE_LIMITS;
```

Default upper bounds for `parsePlantUml`. Callers can override any
of these via the `limits` option. The defaults are generous (10 MiB
source, 100k lines, 10k boxes/edges) so legitimate large diagrams
still parse, but malicious or runaway inputs fail fast instead of
exhausting memory.

#### <a id="parseplantuml-parserplantuml"></a>`parsePlantUml`

```ts
function parsePlantUml(text, opts = {});
```

Parse a PlantUML source string into the input-agnostic diagram model.
The parser auto-detects sequence vs. component syntax via the
internal `looksLikeSequence` heuristic.

**Parameters**

| Name                | Type     | Description      |
| ------------------- | -------- | ---------------- |
| `text`              | `string` | PlantUML source. |
| `opts` _(optional)_ | `object` | —                |

**Returns:** `import("../model/diagram.mjs").Diagram | import("../model/diagram.mjs").SequenceDiagram`

---

## `parser/plugins/component/class_block`

_Source: [`src/parser/plugins/component/class_block.mjs`](src/parser/plugins/component/class_block.mjs)_

### Exports

| Name                                                                      | Kind     | Visibility  |
| ------------------------------------------------------------------------- | -------- | ----------- |
| [`parseClassHeader`](#parseclassheader-parserpluginscomponentclass_block) | function | unspecified |
| [`classBlockPlugin`](#classblockplugin-parserpluginscomponentclass_block) | const    | unspecified |

#### <a id="parseclassheader-parserpluginscomponentclass_block"></a>`parseClassHeader`

```ts
function parseClassHeader(line);
```

Parse a class-diagram header line. Returns `null` when the line does
not start with `class | interface | enum` (optionally preceded by an
`abstract` modifier). Designed to be lenient about ordering of the
`<<stereo>>`, `extends` and `implements` clauses since PlantUML itself
accepts them in either order.

**Parameters**

| Name   | Type     | Description |
| ------ | -------- | ----------- |
| `line` | `string` | —           |

**Returns:** `ClassHeader|null`

#### <a id="classblockplugin-parserpluginscomponentclass_block"></a>`classBlockPlugin`

```ts
const classBlockPlugin;
```

Class-diagram block plugin. Runs before the legacy keyword-shape
plugin so `class | interface | enum [extends|implements] [{ … }]` is
routed here, while everything else (`component`, `database`, …)
keeps flowing through {@link shapeKeywordPlugin}.

### Type definitions

#### `ClassHeader`

```ts
{
  shape: "class"|"interface"|"enum",
  isAbstract: boolean,
  name: string,
  alias: string|null,
  generics: string,
  stereotype: string,
  extendsList: string[],
  implementsList: string[],
  description: string,
  opensBrace: boolean,
}
```

shape: "class"|"interface"|"enum",
isAbstract: boolean,
name: string,
alias: string|null,
generics: string,
stereotype: string,
extendsList: string[],
implementsList: string[],
description: string,
opensBrace: boolean,
}} ClassHeader

---

## `parser/plugins/component/connections`

_Source: [`src/parser/plugins/component/connections.mjs`](src/parser/plugins/component/connections.mjs)_

### Exports

| Name                                                                      | Kind  | Visibility  |
| ------------------------------------------------------------------------- | ----- | ----------- |
| [`connectionPlugin`](#connectionplugin-parserpluginscomponentconnections) | const | unspecified |

#### <a id="connectionplugin-parserpluginscomponentconnections"></a>`connectionPlugin`

```ts
const connectionPlugin;
```

Generic component-style connection: `A op B [: label]`. All arrow
flavours are decoded by `classifyArrow()` — extend that to support
a new operator.

---

## `parser/plugins/component/containers`

_Source: [`src/parser/plugins/component/containers.mjs`](src/parser/plugins/component/containers.mjs)_

### Exports

| Name                                                                   | Kind  | Visibility  |
| ---------------------------------------------------------------------- | ----- | ----------- |
| [`containerPlugin`](#containerplugin-parserpluginscomponentcontainers) | const | unspecified |

#### <a id="containerplugin-parserpluginscomponentcontainers"></a>`containerPlugin`

```ts
const containerPlugin;
```

Container keywords (`package`, `frame`, …) plus `together`. Always
opens a brace; the matching `}` is consumed by `closeBracePlugin`.

---

## `parser/plugins/component/notes`

_Source: [`src/parser/plugins/component/notes.mjs`](src/parser/plugins/component/notes.mjs)_

### Exports

| Name                                                              | Kind  | Visibility  |
| ----------------------------------------------------------------- | ----- | ----------- |
| [`noteOfPlugin`](#noteofplugin-parserpluginscomponentnotes)       | const | unspecified |
| [`noteFreePlugin`](#notefreeplugin-parserpluginscomponentnotes)   | const | unspecified |
| [`noteBlockPlugin`](#noteblockplugin-parserpluginscomponentnotes) | const | unspecified |

#### <a id="noteofplugin-parserpluginscomponentnotes"></a>`noteOfPlugin`

```ts
const noteOfPlugin;
```

Single-line note: `note <side> of <id> : text`.

#### <a id="notefreeplugin-parserpluginscomponentnotes"></a>`noteFreePlugin`

```ts
const noteFreePlugin;
```

Free-floating note declared as a stand-alone box: `note "text" as Nx`.

#### <a id="noteblockplugin-parserpluginscomponentnotes"></a>`noteBlockPlugin`

```ts
const noteBlockPlugin;
```

Multi-line note block, terminated by `end note`.

---

## `parser/plugins/component/preamble`

_Source: [`src/parser/plugins/component/preamble.mjs`](src/parser/plugins/component/preamble.mjs)_

### Exports

| Name                                                                   | Kind  | Visibility  |
| ---------------------------------------------------------------------- | ----- | ----------- |
| [`titlePlugin`](#titleplugin-parserpluginscomponentpreamble)           | const | unspecified |
| [`closeBracePlugin`](#closebraceplugin-parserpluginscomponentpreamble) | const | unspecified |
| [`skinparamPlugin`](#skinparamplugin-parserpluginscomponentpreamble)   | const | unspecified |

#### <a id="titleplugin-parserpluginscomponentpreamble"></a>`titlePlugin`

```ts
const titlePlugin;
```

`title …` line.

#### <a id="closebraceplugin-parserpluginscomponentpreamble"></a>`closeBracePlugin`

```ts
const closeBracePlugin;
```

Closing `}` for any open container.

#### <a id="skinparamplugin-parserpluginscomponentpreamble"></a>`skinparamPlugin`

```ts
const skinparamPlugin;
```

Component diagrams currently tolerate PlantUML skinparams without applying
them so strict parsing stays compatible with common style preambles.

---

## `parser/plugins/component/shapes`

_Source: [`src/parser/plugins/component/shapes.mjs`](src/parser/plugins/component/shapes.mjs)_

### Exports

| Name                                                                       | Kind  | Visibility  |
| -------------------------------------------------------------------------- | ----- | ----------- |
| [`bracketBoxPlugin`](#bracketboxplugin-parserpluginscomponentshapes)       | const | unspecified |
| [`usecaseParensPlugin`](#usecaseparensplugin-parserpluginscomponentshapes) | const | unspecified |
| [`shapeKeywordPlugin`](#shapekeywordplugin-parserpluginscomponentshapes)   | const | unspecified |

#### <a id="bracketboxplugin-parserpluginscomponentshapes"></a>`bracketBoxPlugin`

```ts
const bracketBoxPlugin;
```

Bracket shorthand: `[Label] [as alias] [: description]`.

#### <a id="usecaseparensplugin-parserpluginscomponentshapes"></a>`usecaseParensPlugin`

```ts
const usecaseParensPlugin;
```

Use-case parens shorthand: `(Label) [as alias]`.

#### <a id="shapekeywordplugin-parserpluginscomponentshapes"></a>`shapeKeywordPlugin`

```ts
const shapeKeywordPlugin;
```

Keyword-prefixed shape (`component`, `actor`, `database`, …) plus
the special-cased `class X { … }` member block.

---

## `parser/plugins/sequence/advanced`

_Source: [`src/parser/plugins/sequence/advanced.mjs`](src/parser/plugins/sequence/advanced.mjs)_

### Exports

| Name                                                                              | Kind  | Visibility  |
| --------------------------------------------------------------------------------- | ----- | ----------- |
| [`sequenceAdvancedPlugin`](#sequenceadvancedplugin-parserpluginssequenceadvanced) | const | unspecified |

#### <a id="sequenceadvancedplugin-parserpluginssequenceadvanced"></a>`sequenceAdvancedPlugin`

```ts
const sequenceAdvancedPlugin;
```

Miscellaneous PlantUML sequence constructs.

---

## `parser/plugins/sequence/fragments`

_Source: [`src/parser/plugins/sequence/fragments.mjs`](src/parser/plugins/sequence/fragments.mjs)_

### Exports

| Name                                                               | Kind  | Visibility  |
| ------------------------------------------------------------------ | ----- | ----------- |
| [`fragmentPlugin`](#fragmentplugin-parserpluginssequencefragments) | const | unspecified |

#### <a id="fragmentplugin-parserpluginssequencefragments"></a>`fragmentPlugin`

```ts
const fragmentPlugin;
```

Combined fragment lines for sequence diagrams.

---

## `parser/plugins/sequence/messages`

_Source: [`src/parser/plugins/sequence/messages.mjs`](src/parser/plugins/sequence/messages.mjs)_

### Exports

| Name                                                            | Kind  | Visibility  |
| --------------------------------------------------------------- | ----- | ----------- |
| [`messagePlugin`](#messageplugin-parserpluginssequencemessages) | const | unspecified |

#### <a id="messageplugin-parserpluginssequencemessages"></a>`messagePlugin`

```ts
const messagePlugin;
```

---

## `parser/plugins/sequence/notes`

_Source: [`src/parser/plugins/sequence/notes.mjs`](src/parser/plugins/sequence/notes.mjs)_

### Exports

| Name                                                                         | Kind  | Visibility  |
| ---------------------------------------------------------------------------- | ----- | ----------- |
| [`noteSidePlugin`](#notesideplugin-parserpluginssequencenotes)               | const | unspecified |
| [`noteOverPlugin`](#noteoverplugin-parserpluginssequencenotes)               | const | unspecified |
| [`noteAcrossPlugin`](#noteacrossplugin-parserpluginssequencenotes)           | const | unspecified |
| [`noteSideBlockPlugin`](#notesideblockplugin-parserpluginssequencenotes)     | const | unspecified |
| [`noteOverBlockPlugin`](#noteoverblockplugin-parserpluginssequencenotes)     | const | unspecified |
| [`noteAcrossBlockPlugin`](#noteacrossblockplugin-parserpluginssequencenotes) | const | unspecified |

#### <a id="notesideplugin-parserpluginssequencenotes"></a>`noteSidePlugin`

```ts
const noteSidePlugin;
```

Single-line side note: `note left|right [of <id>] : text`.

#### <a id="noteoverplugin-parserpluginssequencenotes"></a>`noteOverPlugin`

```ts
const noteOverPlugin;
```

Single-line `note over A[, B] : text`.

#### <a id="noteacrossplugin-parserpluginssequencenotes"></a>`noteAcrossPlugin`

```ts
const noteAcrossPlugin;
```

Single-line `note across : text`.

#### <a id="notesideblockplugin-parserpluginssequencenotes"></a>`noteSideBlockPlugin`

```ts
const noteSideBlockPlugin;
```

Multi-line side-note block.

#### <a id="noteoverblockplugin-parserpluginssequencenotes"></a>`noteOverBlockPlugin`

```ts
const noteOverBlockPlugin;
```

Multi-line `note over` block.

#### <a id="noteacrossblockplugin-parserpluginssequencenotes"></a>`noteAcrossBlockPlugin`

```ts
const noteAcrossBlockPlugin;
```

Multi-line `note across` block.

---

## `parser/plugins/sequence/participants`

_Source: [`src/parser/plugins/sequence/participants.mjs`](src/parser/plugins/sequence/participants.mjs)_

### Exports

| Name                                                                        | Kind  | Visibility  |
| --------------------------------------------------------------------------- | ----- | ----------- |
| [`participantPlugin`](#participantplugin-parserpluginssequenceparticipants) | const | unspecified |

#### <a id="participantplugin-parserpluginssequenceparticipants"></a>`participantPlugin`

```ts
const participantPlugin;
```

Sequence-diagram participant declaration.

---

## `parser/plugins/sequence/preamble`

_Source: [`src/parser/plugins/sequence/preamble.mjs`](src/parser/plugins/sequence/preamble.mjs)_

### Exports

| Name                                                                | Kind  | Visibility  |
| ------------------------------------------------------------------- | ----- | ----------- |
| [`titlePlugin`](#titleplugin-parserpluginssequencepreamble)         | const | unspecified |
| [`skinparamPlugin`](#skinparamplugin-parserpluginssequencepreamble) | const | unspecified |

#### <a id="titleplugin-parserpluginssequencepreamble"></a>`titlePlugin`

```ts
const titlePlugin;
```

`title …` line for sequence diagrams.

#### <a id="skinparamplugin-parserpluginssequencepreamble"></a>`skinparamPlugin`

```ts
const skinparamPlugin;
```

Small, deterministic subset of sequence skinparams that maps directly onto
renderer style fields. Other skinparams are consumed tolerantly.

---

## `parser/sequence_context`

_Source: [`src/parser/sequence_context.mjs`](src/parser/sequence_context.mjs)_

### Exports

| Name                                                                     | Kind     | Visibility |
| ------------------------------------------------------------------------ | -------- | ---------- |
| [`createSequenceContext`](#createsequencecontext-parsersequence_context) | function | public     |

#### <a id="createsequencecontext-parsersequence_context"></a>`createSequenceContext`

```ts
function createSequenceContext();
```

Construct the mutable parsing context shared by all sequence-diagram
plugins during a single `parsePlantUml` invocation.

**Returns:** `{ readonly result: import("../model/diagram.mjs").SequenceDiagram, diagram: import("../model/diagram.mjs").SequenceDiagram, setTitle(t: string): void, setHeader(t: string): void, setFooter(t: string): void, setMainframe(t: string): void, ensureParticipant(id: string): import("../model/diagram.mjs").Participant, declareParticipant(spec: object): import("../model/diagram.mjs").Participant, nextMessageId(): string, nextNoteId(): string, nextFragmentId(): string, nextActivationId(): string, nextMarkerId(): string, nextReferenceId(): string, nextParticipantGroupId(): string, currentSeq(): number, lastSeq(): number, addMessage(spec: object): import("../model/diagram.mjs").Message, addNote(spec: object): void, addMarker(kind: string, label?: string, size?: number): void, addReference(spec: object): void, startFragment(kind: string, label?: string, secondaryLabel?: string, color?: string): void, splitFragmentOperand(label?: string): boolean, endFragment(): boolean, startActivation(participant: import("../model/diagram.mjs").Participant, color?: string, seq?: number, caller?: import("../model/diagram.mjs").Participant|null): void, endActivation(participant: import("../model/diagram.mjs").Participant, seq?: number): boolean, addReturnMessage(label?: string): boolean, markCreated(participant: import("../model/diagram.mjs").Participant, seq?: number): void, markDestroyed(participant: import("../model/diagram.mjs").Participant, seq?: number): void, setAutonumber(enabled: boolean, start?: number, step?: number, format?: string): void, setSequenceStyle(key: keyof import("../model/diagram.mjs").SequenceDiagram["style"], value: string): void, setFootboxVisible(visible: boolean): void, setHideUnlinked(visible: boolean): void, startParticipantGroup(label?: string, color?: string): void, endParticipantGroup(): boolean, }`

---

## `parser/utils`

_Source: [`src/parser/utils.mjs`](src/parser/utils.mjs)_

### Exports

| Name                                            | Kind     | Visibility |
| ----------------------------------------------- | -------- | ---------- |
| [`STEREOTYPE`](#stereotype-parserutils)         | const    | public     |
| [`TITLE_LINE`](#title_line-parserutils)         | const    | public     |
| [`ALWAYS_SKIP`](#always_skip-parserutils)       | const    | public     |
| [`stripComment`](#stripcomment-parserutils)     | function | public     |
| [`stripQuotes`](#stripquotes-parserutils)       | function | public     |
| [`slug`](#slug-parserutils)                     | function | public     |
| [`unescapeLabel`](#unescapelabel-parserutils)   | function | public     |
| [`explodeBraces`](#explodebraces-parserutils)   | function | public     |
| [`normaliseShape`](#normaliseshape-parserutils) | function | public     |
| [`classifyArrow`](#classifyarrow-parserutils)   | function | public     |

#### <a id="stereotype-parserutils"></a>`STEREOTYPE`

```ts
const STEREOTYPE;
```

Matches a PlantUML stereotype like `<<service>>`. Capturing group 1
yields the unwrapped tag.

#### <a id="title_line-parserutils"></a>`TITLE_LINE`

```ts
const TITLE_LINE;
```

Matches a top-level `title …` line. Capturing group 1 yields the
raw title text (still possibly quoted).

#### <a id="always_skip-parserutils"></a>`ALWAYS_SKIP`

```ts
const ALWAYS_SKIP;
```

Lines we always silently skip. Plugins can extend this via the
engine's `skip` array if needed.

#### <a id="stripcomment-parserutils"></a>`stripComment`

```ts
function stripComment(line);
```

Strip a trailing PlantUML line comment (`'…`), preserving any `'`
that appears inside a string literal.

**Parameters**

| Name   | Type     | Description                                         |
| ------ | -------- | --------------------------------------------------- |
| `line` | `string` | Raw input line, possibly containing a `'…` comment. |

**Returns:** `string` — The line with the comment removed (empty string if the entire line is a comment).

#### <a id="stripquotes-parserutils"></a>`stripQuotes`

```ts
function stripQuotes(s);
```

Remove a single matching pair of surrounding double quotes.

**Parameters**

| Name | Type     | Description                          |
| ---- | -------- | ------------------------------------ |
| `s`  | `string` | String that may be wrapped in `"…"`. |

**Returns:** `string` — The unwrapped string, or `s` unchanged if not quoted.

#### <a id="slug-parserutils"></a>`slug`

```ts
function slug(s);
```

Convert any string to an identifier-safe slug. Preserves Unicode
letters and digits (e.g. `ümlaut`, `日本`) while collapsing every
other character to `_`. Falls back to a hashed identifier if the
input has no letters/digits at all so that connections never lose
their endpoint id.

**Parameters**

| Name | Type     | Description                 |
| ---- | -------- | --------------------------- |
| `s`  | `string` | Free-form text to sluggify. |

**Returns:** `string` — Lower-case, underscore-separated identifier.

#### <a id="unescapelabel-parserutils"></a>`unescapeLabel`

```ts
function unescapeLabel(s);
```

Replace the literal escape sequence `\n` in a label with a real
newline. Tolerates `null` / `undefined`.

**Parameters**

| Name | Type    | Description |
| ---- | ------- | ----------- | ---------- | ----------------------------------------------- |
| `s`  | `string | null        | undefined` | Raw label as it appears in the PlantUML source. |

**Returns:** `string` — Label with `\n` expanded to real line breaks.

#### <a id="explodebraces-parserutils"></a>`explodeBraces`

```ts
function explodeBraces(lines);
```

Normalise inline `{ … }` so that `frame "F" as f { [a] [b] }` parses
cleanly. Splits each line on `{` and `}` boundaries OUTSIDE quoted
strings, then re-attaches a lone `{` to the preceding header line.

**Parameters**

| Name    | Type       | Description                              |
| ------- | ---------- | ---------------------------------------- |
| `lines` | `string[]` | Raw, already line-split PlantUML source. |

**Returns:** `string[]` — New array with every brace on its own (or attached to its header) line.

#### <a id="normaliseshape-parserutils"></a>`normaliseShape`

```ts
function normaliseShape(kw);
```

Map a PlantUML shape keyword to the canonical model shape name.
Unknown keywords fall back to `"rectangle"`.

**Parameters**

| Name | Type     | Description                                         |
| ---- | -------- | --------------------------------------------------- |
| `kw` | `string` | PlantUML shape keyword (e.g. `component`, `actor`). |

**Returns:** `string` — One of the canonical model shapes — always defined.

#### <a id="classifyarrow-parserutils"></a>`classifyArrow`

```ts
function classifyArrow(op);
```

Decode a PlantUML connection operator (e.g. `-->`, `<|--`, `o--`)
into its structural fields: kind, dashed-ness, reversed direction
and start/end arrowhead. Returns `null` if the operator is not
recognised.

**Parameters**

| Name | Type     | Description                                             |
| ---- | -------- | ------------------------------------------------------- |
| `op` | `string` | Raw arrow operator as it appears between two endpoints. |

**Returns:** `{ kind: "default"|"dependency"|"inheritance"|"realization"|"composition"|"aggregation", dashed: boolean, reversed: boolean, startArrowhead: string|null, endArrowhead: string|null, directionHint: string|null, } | null` — Structural breakdown of the operator, or `null` when unrecognised.

---

## `render/canvas_svg`

_Source: [`src/render/canvas_svg.mjs`](src/render/canvas_svg.mjs)_

### Exports

| Name                                                                       | Kind     | Visibility  |
| -------------------------------------------------------------------------- | -------- | ----------- |
| [`DEFAULT_CANVAS_WIDTH`](#default_canvas_width-rendercanvas_svg)           | const    | unspecified |
| [`MIN_CANVAS_WIDTH`](#min_canvas_width-rendercanvas_svg)                   | const    | unspecified |
| [`MAX_CANVAS_WIDTH`](#max_canvas_width-rendercanvas_svg)                   | const    | unspecified |
| [`DEFAULT_ASPECT_RATIO`](#default_aspect_ratio-rendercanvas_svg)           | const    | unspecified |
| [`excalidrawJsonToCanvasSvg`](#excalidrawjsontocanvassvg-rendercanvas_svg) | function | unspecified |

#### <a id="default_canvas_width-rendercanvas_svg"></a>`DEFAULT_CANVAS_WIDTH`

```ts
const DEFAULT_CANVAS_WIDTH;
```

#### <a id="min_canvas_width-rendercanvas_svg"></a>`MIN_CANVAS_WIDTH`

```ts
const MIN_CANVAS_WIDTH;
```

#### <a id="max_canvas_width-rendercanvas_svg"></a>`MAX_CANVAS_WIDTH`

```ts
const MAX_CANVAS_WIDTH;
```

#### <a id="default_aspect_ratio-rendercanvas_svg"></a>`DEFAULT_ASPECT_RATIO`

```ts
const DEFAULT_ASPECT_RATIO;
```

#### <a id="excalidrawjsontocanvassvg-rendercanvas_svg"></a>`excalidrawJsonToCanvasSvg`

```ts
function excalidrawJsonToCanvasSvg(doc, opts = {});
```

Convert an Excalidraw JSON document to an SVG that has been
letter-boxed onto a fixed-aspect canvas.

**Parameters**

| Name                | Type     | Description               |
| ------------------- | -------- | ------------------------- |
| `doc`               | `object` | Excalidraw JSON document. |
| `opts` _(optional)_ | `object` | —                         |

**Returns:** `string` — A canvas-sized SVG document.

---

## `render/excalidraw`

_Source: [`src/render/excalidraw.mjs`](src/render/excalidraw.mjs)_

### Exports

| Name                                               | Kind     | Visibility |
| -------------------------------------------------- | -------- | ---------- |
| [`exportDiagram`](#exportdiagram-renderexcalidraw) | function | public     |

#### <a id="exportdiagram-renderexcalidraw"></a>`exportDiagram`

```ts
function exportDiagram(diagram, opts = {});
```

Render a laid-out diagram to an Excalidraw JSON document.

The output is **deterministic** by default: identical input always
produces a byte-identical document, because element ids and seeds
are sourced from a stable hash of `sourceLabel` + diagram title.
Pass `opts.rng = Math.random` to opt back into non-deterministic
randomness (e.g. when running in an editor that expects unique
seeds across sessions).

**Parameters**

| Name                | Type                                    | Description                                     |
| ------------------- | --------------------------------------- | ----------------------------------------------- | ---------------------------------------------------------------------------------------------- |
| `diagram`           | `import("../model/diagram.mjs").Diagram | import("../model/diagram.mjs").SequenceDiagram` | A diagram that has already been processed by `layoutDiagram` from `src/layout/elk_layout.mjs`. |
| `opts` _(optional)_ | `object`                                | —                                               |

**Returns:** `object` — Excalidraw JSON.

### Type definitions

#### `Pt`

```ts
{x:number,y:number}
```

Excalidraw element. Excalidraw's JSON shape is loose and varies by
element type; we use a generic record so callers can read/write
well-known fields without a full schema dependency.

---

## `render/png`

_Source: [`src/render/png.mjs`](src/render/png.mjs)_

### Exports

| Name                              | Kind     | Visibility  |
| --------------------------------- | -------- | ----------- |
| [`svgToPng`](#svgtopng-renderpng) | function | unspecified |

#### <a id="svgtopng-renderpng"></a>`svgToPng`

```ts
function svgToPng(svgText, opts = {});
```

Rasterise an SVG document to PNG.

**Parameters**

| Name                | Type     | Description |
| ------------------- | -------- | ----------- |
| `svgText`           | `string` | —           |
| `opts` _(optional)_ | `object` | —           |

**Returns:** `Buffer` — PNG bytes.

**Throws:**

- {RangeError} If `opts.width` is not a positive integer.

---

## `render/rng`

_Source: [`src/render/rng.mjs`](src/render/rng.mjs)_

### Exports

| Name                                            | Kind     | Visibility |
| ----------------------------------------------- | -------- | ---------- |
| [`stableHash32`](#stablehash32-renderrng)       | function | internal   |
| [`createSeededRng`](#createseededrng-renderrng) | function | internal   |

#### <a id="stablehash32-renderrng"></a>`stableHash32`

```ts
function stableHash32(text);
```

32-bit FNV-1a hash. Used to derive a stable PRNG seed from a string.

**Parameters**

| Name   | Type     | Description |
| ------ | -------- | ----------- |
| `text` | `string` | —           |

**Returns:** `number` — Unsigned 32-bit integer.

#### <a id="createseededrng-renderrng"></a>`createSeededRng`

```ts
function createSeededRng(seed);
```

Create a deterministic PRNG returning floats in `[0, 1)`. Uses the
xorshift32 algorithm — small, fast, good enough for Excalidraw seeds.

**Parameters**

| Name   | Type     | Description                   |
| ------ | -------- | ----------------------------- |
| `seed` | `number` | Unsigned 32-bit integer seed. |

**Returns:** `() => number`

---

## `render/schema`

_Source: [`src/render/schema.mjs`](src/render/schema.mjs)_

### Exports

| Name                                                   | Kind  | Visibility |
| ------------------------------------------------------ | ----- | ---------- |
| [`EXCALIDRAW_SCHEMA`](#excalidraw_schema-renderschema) | const | public     |
| [`ROUNDNESS`](#roundness-renderschema)                 | const | public     |

#### <a id="excalidraw_schema-renderschema"></a>`EXCALIDRAW_SCHEMA`

```ts
const EXCALIDRAW_SCHEMA;
```

Top-level metadata emitted on every `.excalidraw` document.

#### <a id="roundness-renderschema"></a>`ROUNDNESS`

```ts
const ROUNDNESS;
```

Roundness presets used by Excalidraw shapes. `proportional` is the
default for rectangles when the user toggles "rounded corners" in
the editor.

---

## `render/sequence_render`

_Source: [`src/render/sequence_render.mjs`](src/render/sequence_render.mjs)_

### Exports

| Name                                                                    | Kind     | Visibility  |
| ----------------------------------------------------------------------- | -------- | ----------- |
| [`exportSequenceDiagram`](#exportsequencediagram-rendersequence_render) | function | unspecified |

#### <a id="exportsequencediagram-rendersequence_render"></a>`exportSequenceDiagram`

```ts
function exportSequenceDiagram(diagram, { sourceLabel, primitives });
```

Render a SequenceDiagram into an Excalidraw JSON document.

**Parameters**

| Name      | Type                                             | Description       |
| --------- | ------------------------------------------------ | ----------------- |
| `diagram` | `import("../model/diagram.mjs").SequenceDiagram` | Sequence diagram. |
| `ctx`     | `object`                                         | Render context.   |

**Returns:** `object` — Excalidraw JSON document.

---

## `render/svg`

_Source: [`src/render/svg.mjs`](src/render/svg.mjs)_

### Exports

| Name                                            | Kind     | Visibility  |
| ----------------------------------------------- | -------- | ----------- |
| [`excalidrawToSvg`](#excalidrawtosvg-rendersvg) | function | unspecified |
| [`escapeAttr`](#escapeattr-rendersvg)           | function | unspecified |
| [`escapeText`](#escapetext-rendersvg)           | function | unspecified |

#### <a id="excalidrawtosvg-rendersvg"></a>`excalidrawToSvg`

```ts
function excalidrawToSvg(doc, opts = {});
```

Convert an Excalidraw JSON document to a stand-alone SVG string.

**Parameters**

| Name                | Type     | Description                   |
| ------------------- | -------- | ----------------------------- |
| `doc`               | `any`    | The Excalidraw JSON document. |
| `opts` _(optional)_ | `object` | —                             |

**Returns:** `string` — A complete `<svg>...</svg>` document.

#### <a id="escapeattr-rendersvg"></a>`escapeAttr`

```ts
function escapeAttr(s);
```

Escape a string for safe interpolation into an SVG attribute value.
Escapes `&`, `"`, `<` and `>` so attacker-controlled input cannot
break out of the surrounding `"..."` and inject extra attributes
or markup.

**Parameters**

| Name | Type     | Description |
| ---- | -------- | ----------- |
| `s`  | `string` | Raw string. |

**Returns:** `string` — Escaped string.

#### <a id="escapetext-rendersvg"></a>`escapeText`

```ts
function escapeText(s);
```

Escape a string for safe interpolation into SVG text content.

**Parameters**

| Name | Type     | Description |
| ---- | -------- | ----------- |
| `s`  | `string` | Raw string. |

**Returns:** `string` — Escaped string.

---

## `style/colors`

_Source: [`src/style/colors.mjs`](src/style/colors.mjs)_

### Exports

| Name                                          | Kind     | Visibility |
| --------------------------------------------- | -------- | ---------- |
| [`planeColor`](#planecolor-stylecolors)       | function | public     |
| [`subplaneColor`](#subplanecolor-stylecolors) | function | public     |
| [`boxColor`](#boxcolor-stylecolors)           | function | public     |

#### <a id="planecolor-stylecolors"></a>`planeColor`

```ts
function planeColor(id);
```

Deterministically derive a {@link ColorTriple} from a plane id. The
same id always yields the same colours so re-rendering the same
diagram is byte-stable.

**Parameters**

| Name | Type     | Description                                 |
| ---- | -------- | ------------------------------------------- |
| `id` | `string` | Plane identifier (alias or generated slug). |

**Returns:** `ColorTriple` — Stroke / fill / title-fill colours for the plane.

#### <a id="subplanecolor-stylecolors"></a>`subplaneColor`

```ts
function subplaneColor(planeColor);
```

Derive a subplane's {@link ColorTriple} from its parent plane's
triple by darkening the fills slightly.

**Parameters**

| Name         | Type          | Description                   |
| ------------ | ------------- | ----------------------------- |
| `planeColor` | `ColorTriple` | Parent plane's colour triple. |

**Returns:** `ColorTriple` — Slightly darker triple for the nested subplane.

#### <a id="boxcolor-stylecolors"></a>`boxColor`

```ts
function boxColor(planeColor);
```

Derive a box's {@link ColorTriple} from its plane's colour: the
stroke matches the plane, the box body is white, and the title bar
is a subtly darker variant of the plane fill.

**Parameters**

| Name         | Type          | Description                   |
| ------------ | ------------- | ----------------------------- |
| `planeColor` | `ColorTriple` | Owning plane's colour triple. |

**Returns:** `ColorTriple` — Triple with white body and tinted title bar.

### Type definitions

#### `ColorTriple`

```ts
{ stroke: string, fill: string, titleFill: string }
```

Hex-coded fill / stroke / title-fill colours used by one renderable.

---

## `style/font`

_Source: [`src/style/font.mjs`](src/style/font.mjs)_

### Exports

| Name                                                                    | Kind     | Visibility  |
| ----------------------------------------------------------------------- | -------- | ----------- |
| [`EXCALIFONT_FAMILY`](#excalifont_family-stylefont)                     | const    | unspecified |
| [`EXCALIFONT_FONT_PATH`](#excalifont_font_path-stylefont)               | const    | unspecified |
| [`EXCALIFONT_RASTER_FONT_PATH`](#excalifont_raster_font_path-stylefont) | const    | unspecified |
| [`getExcalifontWoff2`](#getexcalifontwoff2-stylefont)                   | function | public      |
| [`getExcalifontDataUrl`](#getexcalifontdataurl-stylefont)               | function | public      |
| [`getExcalifontFontFace`](#getexcalifontfontface-stylefont)             | function | public      |
| [`EXCALIFONT_FONT_STACK`](#excalifont_font_stack-stylefont)             | const    | unspecified |

#### <a id="excalifont_family-stylefont"></a>`EXCALIFONT_FAMILY`

```ts
const EXCALIFONT_FAMILY;
```

Family name used inside the SVG `font-family` attribute.

#### <a id="excalifont_font_path-stylefont"></a>`EXCALIFONT_FONT_PATH`

```ts
const EXCALIFONT_FONT_PATH;
```

Absolute filesystem path to the bundled woff2.

#### <a id="excalifont_raster_font_path-stylefont"></a>`EXCALIFONT_RASTER_FONT_PATH`

```ts
const EXCALIFONT_RASTER_FONT_PATH;
```

Absolute filesystem path to the bundled TrueType copy used by resvg.

#### <a id="getexcalifontwoff2-stylefont"></a>`getExcalifontWoff2`

```ts
function getExcalifontWoff2();
```

Returns the bundled Excalifont woff2 bytes. Cached after the first
call so subsequent renders share one buffer.

**Returns:** `Buffer`

#### <a id="getexcalifontdataurl-stylefont"></a>`getExcalifontDataUrl`

```ts
function getExcalifontDataUrl();
```

Returns a `data:font/woff2;base64,…` URL with the inlined font.

**Returns:** `string`

#### <a id="getexcalifontfontface-stylefont"></a>`getExcalifontFontFace`

```ts
function getExcalifontFontFace();
```

Returns a complete `@font-face { … }` rule ready to drop inside an
SVG `<style>` block.

**Returns:** `string`

#### <a id="excalifont_font_stack-stylefont"></a>`EXCALIFONT_FONT_STACK`

```ts
const EXCALIFONT_FONT_STACK;
```

Stack containing Excalifont plus OS-default cursive fallbacks. Used
so renderers that sandbox `<style>` (some Markdown sanitisers do)
still produce a recognisable hand-drawn look.

---

## `style/style`

_Source: [`src/style/style.mjs`](src/style/style.mjs)_

### Exports

| Name                                                           | Kind     | Visibility  |
| -------------------------------------------------------------- | -------- | ----------- |
| [`EXCALIDRAW_FONT_FAMILY`](#excalidraw_font_family-stylestyle) | const    | public      |
| [`DEFAULT_STYLE`](#default_style-stylestyle)                   | const    | public      |
| [`getStyle`](#getstyle-stylestyle)                             | function | public      |
| [`setStyle`](#setstyle-stylestyle)                             | function | public      |
| [`resetStyle`](#resetstyle-stylestyle)                         | function | public      |
| [`loadStyleFromFile`](#loadstylefromfile-stylestyle)           | function | public      |
| [`resolveFontFamilyId`](#resolvefontfamilyid-stylestyle)       | function | public      |
| [`parseSimpleYaml`](#parsesimpleyaml-stylestyle)               | function | unspecified |

#### <a id="excalidraw_font_family-stylestyle"></a>`EXCALIDRAW_FONT_FAMILY`

```ts
const EXCALIDRAW_FONT_FAMILY;
```

Excalidraw `fontFamily` enum mirror, kept here so `style.mjs` is
importable without pulling in `text.mjs` (which now depends on
this file).

#### <a id="default_style-stylestyle"></a>`DEFAULT_STYLE`

```ts
const DEFAULT_STYLE;
```

Default renderer style. Cloned on every `setStyle` call so the
exported reference stays immutable.

#### <a id="getstyle-stylestyle"></a>`getStyle`

```ts
function getStyle();
```

Returns the active style document. Always returns the same live
object; callers should not mutate it directly — use `setStyle`.

**Returns:** `typeof DEFAULT_STYLE`

#### <a id="setstyle-stylestyle"></a>`setStyle`

```ts
function setStyle(partial);
```

Replace the active style with a deep-merged copy of the defaults +
the supplied partial. Returns the new active style.

**Parameters**

| Name      | Type                  | Description              |
| --------- | --------------------- | ------------------------ |
| `partial` | `Record<string, any>` | Partial style overrides. |

**Returns:** `typeof DEFAULT_STYLE`

#### <a id="resetstyle-stylestyle"></a>`resetStyle`

```ts
function resetStyle();
```

Reset to the built-in defaults.

**Returns:** `typeof DEFAULT_STYLE`

#### <a id="loadstylefromfile-stylestyle"></a>`loadStyleFromFile`

```ts
function loadStyleFromFile(filePath);
```

Load a style document from JSON or YAML on disk and apply it.

The file extension decides the parser: `.json`, `.yaml` or `.yml`.
Returns the active style after merge. Returns the unchanged active
style and emits a console warning when the file is missing or
cannot be parsed (so a missing user override never breaks rendering).

**Parameters**

| Name       | Type     | Description                          |
| ---------- | -------- | ------------------------------------ |
| `filePath` | `string` | Absolute or workspace-relative path. |

**Returns:** `typeof DEFAULT_STYLE`

#### <a id="resolvefontfamilyid-stylestyle"></a>`resolveFontFamilyId`

```ts
function resolveFontFamilyId(family);
```

Resolve the configured `font.family` to the numeric Excalidraw id
required by the JSON document.

**Parameters**

| Name     | Type    | Description |
| -------- | ------- | ----------- | -------------------------- |
| `family` | `string | number`     | Family name or numeric id. |

**Returns:** `number`

#### <a id="parsesimpleyaml-stylestyle"></a>`parseSimpleYaml`

```ts
function parseSimpleYaml(text);
```

**Parameters**

| Name   | Type     | Description |
| ------ | -------- | ----------- |
| `text` | `string` | —           |

**Returns:** `Record<string, any>`

---

## `style/text`

_Source: [`src/style/text.mjs`](src/style/text.mjs)_

### Exports

| Name                                                    | Kind     | Visibility |
| ------------------------------------------------------- | -------- | ---------- |
| [`FONT`](#font-styletext)                               | const    | public     |
| [`measureLine`](#measureline-styletext)                 | function | public     |
| [`measureWrapped`](#measurewrapped-styletext)           | function | public     |
| [`measureSmartWrapped`](#measuresmartwrapped-styletext) | function | public     |
| [`measureSmartFitted`](#measuresmartfitted-styletext)   | function | public     |
| [`measureFitted`](#measurefitted-styletext)             | function | public     |
| [`wrapMemberSignature`](#wrapmembersignature-styletext) | function | public     |
| [`isOperationMember`](#isoperationmember-styletext)     | function | internal   |

#### <a id="font-styletext"></a>`FONT`

```ts
const FONT;
```

Live view of the active font configuration. Reading e.g.
`FONT.sizeTitle` always returns the current value from the active
style; `FONT.family` returns the resolved Excalidraw numeric id.

#### <a id="measureline-styletext"></a>`measureLine`

```ts
function measureLine(text, fontSize);
```

Measure a single-line label.

**Parameters**

| Name       | Type     | Description |
| ---------- | -------- | ----------- |
| `text`     | `string` | —           |
| `fontSize` | `number` | —           |

**Returns:** `{ width: number, height: number }`

#### <a id="measurewrapped-styletext"></a>`measureWrapped`

```ts
function measureWrapped(text, fontSize, maxWidth);
```

Word-wrap `text` to fit within `maxWidth` and return its bounding
box plus the produced lines.

**Parameters**

| Name       | Type     | Description |
| ---------- | -------- | ----------- |
| `text`     | `string` | —           |
| `fontSize` | `number` | —           |
| `maxWidth` | `number` | —           |

**Returns:** `{ width: number, height: number, lines: string[] }`

#### <a id="measuresmartwrapped-styletext"></a>`measureSmartWrapped`

```ts
function measureSmartWrapped(text, fontSize, maxWidth);
```

Wrap text at useful reading break points before falling back to hard
cuts. This is intended for arrow labels and endpoint labels where the
available width is driven by geometry rather than by a fixed box.

Preferred breaks are whitespace and common punctuation (`/`, `.`, `-`,
`_`, `,`, `:`, `;`, `)`, `]`). If a single token still cannot fit, the
function hard-wraps it at the measured character budget so later layout
can reserve the correct height instead of letting text bleed into the
next timeline item.

**Parameters**

| Name       | Type     | Description                     |
| ---------- | -------- | ------------------------------- |
| `text`     | `string` | Text to wrap.                   |
| `fontSize` | `number` | Font size used for measurement. |
| `maxWidth` | `number` | Maximum line width in px.       |

**Returns:** `{ width:number, height:number, lines:string[] }` — Wrapped text metrics.

#### <a id="measuresmartfitted-styletext"></a>`measureSmartFitted`

```ts
function measureSmartFitted(text, fontSize, maxWidth, opts = {});
```

Fit smart-wrapped text and shrink only when hard wrapping would still
leave a line wider than `maxWidth` because of font metrics.

**Parameters**

| Name                | Type     | Description               |
| ------------------- | -------- | ------------------------- |
| `text`              | `string` | Text to wrap.             |
| `fontSize`          | `number` | Requested font size.      |
| `maxWidth`          | `number` | Maximum line width in px. |
| `opts` _(optional)_ | `object` | —                         |

**Returns:** `{ fontSize:number, width:number, height:number, lines:string[] }` — Metrics plus chosen font size.

#### <a id="measurefitted-styletext"></a>`measureFitted`

```ts
function measureFitted(text, fontSize, maxWidth, opts = {});
```

Word-wrap `text` and shrink the font size when a single token would
still exceed `maxWidth` at the requested size. Returns the chosen
font size alongside the wrapped lines so the renderer can emit the
same size the sizing pass measured.

Auto-shrink is governed by the active style: when `text.autoShrink`
is `false` the function falls back to the regular `measureWrapped`
result without shrinking.

**Parameters**

| Name                | Type     | Description |
| ------------------- | -------- | ----------- |
| `text`              | `string` | —           |
| `fontSize`          | `number` | —           |
| `maxWidth`          | `number` | —           |
| `opts` _(optional)_ | `object` | —           |

**Returns:** `{ fontSize:number, width:number, height:number, lines:string[] }`

#### <a id="wrapmembersignature-styletext"></a>`wrapMemberSignature`

```ts
function wrapMemberSignature(signature, fontSize, maxWidth, opts = {});
```

Wrap a single class/interface member signature (e.g.
`+foo(bar: number, baz: Map<string, T>): Promise<void>`) at semantically
meaningful break points: after `,`, `(`, `)`, `:`, ` `, `|`, `&`.
Continuation lines get a small indent so it stays visually clear that
they belong to the previous declaration.

Falls back to whitespace-based wrapping when no preferred break point
fits inside `maxWidth`.

**Parameters**

| Name                | Type     | Description                                |
| ------------------- | -------- | ------------------------------------------ |
| `signature`         | `string` | Single member line (no embedded newlines). |
| `fontSize`          | `number` | Font size used for measurement.            |
| `maxWidth`          | `number` | Available inner width in px.               |
| `opts` _(optional)_ | `object` | —                                          |

**Returns:** `{ lines:string[], width:number, height:number }`

#### <a id="isoperationmember-styletext"></a>`isOperationMember`

```ts
function isOperationMember(member);
```

Classify a UML class member line as an operation when it contains a
parameter list. Attribute declarations may contain `:` for types and
generic brackets, but PlantUML method/function members are denoted by
parentheses.

**Parameters**

| Name     | Type     | Description                           |
| -------- | -------- | ------------------------------------- |
| `member` | `string` | Raw class/interface/enum member line. |

**Returns:** `boolean` — `true` for operation/function members.

---

_Total: 34 modules._
